<resources>
    <string name="app_name">TripleArrangement</string>

    <!-- main activity -->
    <string name="game_start">게임 시작</string>
    <string name="start_level">시작 레벨</string>
    <string name="combo_mode">콤보 모드</string>
    <string name="start_level_picker_label">레벨%1$d (블럭 종류 : %2$d개)</string>

    <string name="record_preference_key">recordPreferenceKey</string>
    <string name="btn_pause">||</string>
    <string name="score">Score</string>
    <string name="zero_value">0</string>
    <string name="combo">Combo</string>
    <string name="move_count_in_combo">콤보 유지 : %1$d</string>

    <!-- game over dialog -->
    <string name="max_score">최고 점수</string>
    <string name="now_score">현재 점수</string>
    <string name="max_combo">최고 콤보</string>
    <string name="now_combo">현재 콤보</string>
    <string name="new_record_sign">New!</string>

    <string name="resume">게임 재개</string>
    <string name="go_to_main">메인으로</string>
    <string name="restart">다시 시작</string>

    <string name="key_max_score">maxScoreKey</string>
    <string name="key_max_combo">maxComboKey</string>
    <string name="key_max_level">maxLevelKey</string>
    <string name="key_my_option_start_level">myOptionStartLevelKey</string>
    <string name="key_my_option_combo_mode_flag">myOptionComboModeFlagKey</string>

    <!-- extra keys -->
    <string name="extra_start_option_key">extraStartOptionKey</string>

    <!-- toast -->
    <string name="toast_level_up">레벨%1$d!</string>
    <string name="toast_combo_break">콤보가 깨져요ㅠㅠ(콤보 모드 적용중)</string>

</resources>