<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    >
    <Button
        android:id="@+id/resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:textSize="40sp"/>
    <Button
        android:id="@+id/restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:textSize="40sp"/>
    <Button
        android:id="@+id/goToMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_main"
        android:textSize="40sp"/>
</LinearLayout>