<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/btn_pause"/>
        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/combo"
                android:layout_width= "100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/zero_value"
                android:textSize="50sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/combo"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="30sp"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero_value"
                android:textSize="50sp"
                android:gravity="end" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/wrapper_lines"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/black"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <include
                android:id="@+id/wrapper_line_left"
                layout="@layout/view_line"/>
            <include
                android:id="@+id/wrapper_line_middle"
                layout="@layout/view_line"/>
            <include
                android:id="@+id/wrapper_line_right"
                layout="@layout/view_line"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/time_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/purple_700"
        android:orientation="horizontal">
    </LinearLayout>
</LinearLayout>